generate app library

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,11 @@
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
+    "paths": {
+      "mgw-mat-shell": [
+        "dist/mgw-mat-shell"
+      ]
+    },
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
     "declaration": false,
