--- a/projects/mgw-mat-shell/package.json
+++ b/projects/mgw-mat-shell/package.json
@@ -2,8 +2,10 @@
   "name": "mgw-mat-shell",
   "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "^15.2.0",
-    "@angular/core": "^15.2.0"
+    "@angular/cdk": "^16.2.14",
+    "@angular/common": "^16.2.12",
+    "@angular/core": "^16.2.12",
+    "@angular/material": "^16.2.14"
   },
   "dependencies": {
     "tslib": "^2.3.0"
