--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
       ]
     },
     "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
