--- a/projects/mgw-mat-shell/.eslintrc.json
+++ b/projects/mgw-mat-shell/.eslintrc.json
@@ -21,7 +21,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "lib",
+            "prefix": ["lib", "mgw"],
             "style": "kebab-case"
           }
         ]
